// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout - CartComponent should match snapshot on desktop 1`] = `
<div>
  <div
    class="MuiBox-root css-lgfepz"
  >
    <div
      class="MuiTableContainer-root css-6oj832-MuiTableContainer-root"
    >
      <table
        aria-label="Cart"
        class="MuiTable-root css-14mhd3s-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-bqkitb-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17f78n2-MuiTableCell-root"
              scope="col"
            >
              Product
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1vx7j5t-MuiTableCell-root"
              scope="col"
            >
              Price
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1vx7j5t-MuiTableCell-root"
              scope="col"
            >
              Available Qty
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-yq8ybi-MuiTableCell-root"
              scope="col"
            >
              Order Total
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-29nbga-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-l5uq9n-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-ida0zm"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
                >
                  No items are in the cart.
                </h4>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Checkout - CartComponent should match snapshot on desktop with line items 1`] = `
<div>
  <div
    class="MuiBox-root css-lgfepz"
  >
    <div
      class="MuiTableContainer-root css-6oj832-MuiTableContainer-root"
    >
      <table
        aria-label="Cart"
        class="MuiTable-root css-14mhd3s-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-bqkitb-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17f78n2-MuiTableCell-root"
              scope="col"
            >
              Product
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1vx7j5t-MuiTableCell-root"
              scope="col"
            >
              Price
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1vx7j5t-MuiTableCell-root"
              scope="col"
            >
              Available Qty
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-yq8ybi-MuiTableCell-root"
              scope="col"
            >
              Order Total
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-29nbga-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-3613945"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="2\\" PVC DWV 90D Elbow"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-0"
                  >
                    Generic
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-0"
                  >
                    2" PVC DWV 90D Elbow
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-0"
                  >
                    MFR#
                     
                    PVC-300_2IN
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-0"
              >
                $0.87 ft
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-0"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-0"
                >
                  9
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-0"
                >
                  $7.81
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-null"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-3"
                  />
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-3"
                  >
                    PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-3"
                  >
                    MFR#
                     
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-3"
              >
                $0.82 ea
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-3"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-3"
                >
                  1
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-3"
                >
                  $0.82
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-3613886"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="2\\" PVC DWV 45D Straight Elbow - SCH 40, Hub"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-4"
                  >
                    Generic
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-4"
                  >
                    2" PVC DWV 45D Straight Elbow - SCH 40, Hub
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-4"
                  >
                    MFR#
                     
                    PVC-321_2IN
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-4"
              >
                $0.80 ea
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-4"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-4"
                >
                  4
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-4"
                >
                  $3.21
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-3613984"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="2\\" x 1-1/2\\" x 2\\" PVC Sanitary Reducing Tee - Hub"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-5"
                  >
                    Generic
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-5"
                  >
                    2" x 1-1/2" x 2" PVC Sanitary Reducing Tee - Hub
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-5"
                  >
                    MFR#
                     
                    PVC-401_2X1-1/2X2
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-5"
              >
                $1.51 ea
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-5"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-5"
                >
                  2
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-5"
                >
                  $3.02
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-3709227"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="1-1/2\\" X 20' PVC SCH 40 Foam Core Pipe - Plain End"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-6"
                  >
                    Generic
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-6"
                  >
                    1-1/2" X 20' PVC SCH 40 Foam Core Pipe - Plain End
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-6"
                  >
                    MFR#
                     
                    PVC-4112_1-1/2X20
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-6"
              >
                $0.27 ea
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-6"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-6"
                >
                  80
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-6"
                >
                  $21.60
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
            data-testid="checkout-cart-item-3618055"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-16ngzav-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <div
                  class="MuiBox-root css-1mdpkzj"
                >
                  <img
                    alt="2\\" X 20' PVC SCH 40 Foam Core Pipe - Plain End"
                    class="MuiBox-root css-4w7ia0"
                    src=""
                  />
                </div>
                <div
                  class="MuiBox-root css-1hbndq"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-name-7"
                  >
                    Generic
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
                    data-testid="checkout-product-name-7"
                  >
                    2" X 20' PVC SCH 40 Foam Core Pipe - Plain End
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                    data-testid="checkout-manufacturer-number-7"
                  >
                    MFR#
                     
                    PVC-4200_2X20
                  </span>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
                data-testid="checkout-unit-price-7"
              >
                $0.37 ea
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-dvxtzn"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                  data-testid="checkout-qty-available-7"
                >
                  0
                </span>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-p5phi4-MuiTableCell-root"
            >
              <div
                class="MuiBox-root css-40mi5u"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  data-testid="checkout-item-order-qty-7"
                >
                  100
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
                  data-testid="checkout-item-total-price-7"
                >
                  $37.00
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-fbw43o-MuiTableCell-root"
              colspan="5"
            >
              <div
                class="MuiBox-root css-10bvlll"
              >
                <svg
                  class="MuiBox-root css-fyrd4f"
                  sx="[object Object]"
                >
                  warning.svg
                </svg>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
                >
                  Item is out of stock or below desired quantity
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Checkout - CartComponent should match snapshot on mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-1brqcib"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
    >
      (
      0
      )
       
      items in cart
    </span>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-ida0zm"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
    >
      No items are in the cart.
    </h4>
  </div>
</div>
`;

exports[`Checkout - CartComponent should match snapshot on mobile with line items 1`] = `
<div>
  <div
    class="MuiBox-root css-1brqcib"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
    >
      (
      8
      )
       
      items in cart
    </span>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-3613945"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="2\\" PVC DWV 90D Elbow"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-0"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-0"
        >
          Generic
        </span>
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-0"
        >
          2" PVC DWV 90D Elbow
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-0"
        >
          MFR#
           
          PVC-300_2IN
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-0"
              >
                9
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-0"
        >
          $0.87
           
          ft
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-0"
        >
          $7.81
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-null"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-3"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-3"
        >
          PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-3"
        >
          MFR#
           
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-3"
              >
                1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-3"
        >
          $0.82
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-3"
        >
          $0.82
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-3613886"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="2\\" PVC DWV 45D Straight Elbow - SCH 40, Hub"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-4"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-4"
        >
          Generic
        </span>
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-4"
        >
          2" PVC DWV 45D Straight Elbow - SCH 40, Hub
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-4"
        >
          MFR#
           
          PVC-321_2IN
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-4"
              >
                4
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-4"
        >
          $0.80
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-4"
        >
          $3.21
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-3613984"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="2\\" x 1-1/2\\" x 2\\" PVC Sanitary Reducing Tee - Hub"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-5"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-5"
        >
          Generic
        </span>
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-5"
        >
          2" x 1-1/2" x 2" PVC Sanitary Reducing Tee - Hub
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-5"
        >
          MFR#
           
          PVC-401_2X1-1/2X2
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-5"
              >
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-5"
        >
          $1.51
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-5"
        >
          $3.02
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-3709227"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="1-1/2\\" X 20' PVC SCH 40 Foam Core Pipe - Plain End"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-6"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-6"
        >
          Generic
        </span>
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-6"
        >
          1-1/2" X 20' PVC SCH 40 Foam Core Pipe - Plain End
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-6"
        >
          MFR#
           
          PVC-4112_1-1/2X20
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-6"
              >
                80
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-6"
        >
          $0.27
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-6"
        >
          $21.60
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-3618055"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="2\\" X 20' PVC SCH 40 Foam Core Pipe - Plain End"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-7"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-7"
        >
          Generic
        </span>
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-7"
        >
          2" X 20' PVC SCH 40 Foam Core Pipe - Plain End
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-7"
        >
          MFR#
           
          PVC-4200_2X20
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-7"
              >
                100
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-7"
        >
          $0.37
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-7"
        >
          $37.00
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
</div>
`;
